--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
 .App {
-  text-align: center;
+    text-align: center;
+
+    
+}
+
+html {
+    box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit; 
 }
 
 .App-logo {
@@ -7,16 +19,16 @@
 }
 
 .App-header {
-  background-color: #282c34;
+    background: linear-gradient(128deg, rgba(176,11,144,1) 0%, rgba(140,52,166,1) 27%, rgba(78,123,205,1) 68%, rgba(0,212,255,1) 99%);
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 
-  padding: 70px 0;
+    padding: 70px 0;
 
 }
 
@@ -26,16 +38,28 @@
 
     opacity: 1;
 
+    
+}
+
+.fade {
     position: relative;
     
-    animation-name: title-fade;
+    animation-name: fade-in;
     animation-iteration-count: 1;
-    animation-timing-function: ease-in;
+    animation-timing-function: ease-in-out;
     animation-duration: 1s;
     
 }
 
-@keyframes title-fade {
+.fade-1 {
+    animation-delay: .2s;
+}
+
+.fade-2 {
+    animation-delay: .4s;
+}
+
+@keyframes fade-in {
     from {
 	top: 20px;
 	opacity: 0;
@@ -46,7 +70,65 @@
     }
 }
 
+.project-grid {
+    display: flex;
+    padding: 0 30px; 
+}
 
-.app-link {
-  color: #09d3ac;
+
+.project-tile {
+    position: relative;
+    display: flex;
+    overflow: hidden;
+
+    min-width: 400px;
+    min-height: 400px;
+
+    border-radius: 6px;
+
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+
+    transition: transform .5s cubic-bezier(.215, .61, .355, 1),
+		box-shadow .5s cubic-bezier(.215, .61, .355, 1);
+    transform: perspective(600px) translate3d(0, 0, 0);
+
+   
+}
+
+
+.project-tile-content {
+
+    padding: 25px;
+    
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%
+}
+
+.project-title, .project-description {
+
+}
+
+.project-tile:hover {
+
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+}
+
+.project-tile:hover .project-title {
+    transform: translate3d(0, 0, 40px);
+}
+
+.project-tile:hover .project-description {
+
+    transform: translate3d(0, 0, 40px);
+}
+
+
+.project-tile, .project-tile-content {
+     /* 3d rendering */
+    transform-style: preserve-3d;
+    backface-visibility: hidden; 
 }
