Added both major projects with link, and under construction header

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,16 @@ html {
     box-sizing: inherit; 
 }
 
+a {
+    text-decoration: none;
+    color: black; 
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+
 .App-logo {
   height: 40vmin;
 }
@@ -21,6 +31,7 @@ html {
 .App-header {
 
     background: linear-gradient(128deg, rgba(176,11,144,1) 0%, rgba(140,52,166,1) 27%, rgba(78,123,205,1) 68%, rgba(0,212,255,1) 99%);
+
 
     display: flex;
     flex-direction: column;
@@ -61,6 +72,10 @@ html {
     animation-delay: .4s;
 }
 
+.fade-3 {
+    animation-delay: .6s;
+}
+
 @keyframes fade-in {
 
     from {
@@ -85,7 +100,7 @@ html {
     overflow: hidden;
 
     min-width: 400px;
-    min-height: 400px;
+    min-height: 200px;
 
     border-radius: 6px;
 
@@ -95,6 +110,8 @@ html {
 		box-shadow .5s cubic-bezier(.215, .61, .355, 1);
     transform: perspective(600px) translate3d(0, 0, 0);
 
+    margin: 20px;
+
    
 }
 
@@ -102,13 +119,14 @@ html {
 .project-tile-content {
 
     padding: 25px;
-    
-
+ 
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%
+    height: 100%;
+
+    text-align: left;
 }
 
 .project-title, .project-description {
