--- a/src/App.scss
+++ b/src/App.scss
@@ -6,12 +6,20 @@ $secondary: #CC666F;
 $avatar-size: 150px;
 
 h1 {
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 300;
 }
 
 h2 {
     font-size: 3rem;
+}
+
+h3 {
+    font-size: 2.5rem;
+}
+
+h4 {
+    font-size: 1.5rem;
 }
 
 .App {
@@ -69,6 +77,13 @@ a:hover {
     margin-left: 20px;
 }
 
+#projects {
+    display: flex;
+    justify-content: center;
+}
+
+
+
 // Header
 .Header {
     widht: 100%;
@@ -115,6 +130,7 @@ a:hover {
     color: white;
     justify-content: center;
     text-align: center;
+    margin-bottom: 40px;
 
 }
 
@@ -125,4 +141,21 @@ a:hover {
     margin: 0 60px;
     height: 1px;
     flex-grow: 1;
+}
+
+
+// Project View
+.ProjectView {
+    color: white;
+    width: 60%;
+}
+
+.ProjectView p {
+    float: left;
+}
+
+.ProjectView img {
+    height: 400px;
+    width: auto;
+    float: right;
 }
