--- a/src/App.scss
+++ b/src/App.scss
@@ -6,20 +6,20 @@ $secondary: #cc666f;
 $avatar-size: 150px;
 
 h1 {
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 300;
 }
 
 h2 {
-  font-size: 3rem;
+  // font-size: 3rem;
 }
 
 h3 {
-  font-size: 2.5rem;
+  // font-size: 2.5rem;
 }
 
 h4 {
-  font-size: 1.5rem;
+  // font-size: 1.5rem;
 }
 
 .App {
@@ -91,7 +91,7 @@ a:hover {
 }
 
 .Header li {
-  font-size: 20px;
+  // font-size: 20px;
   color: $lightForeground;
   list-style: none;
   display: inline;
@@ -178,21 +178,21 @@ h4 {
 
 @media only screen and (max-width: 1150px) {
   h4 {
-    font-size: 20px;
+    // font-size: 20px;
   }
 }
 
 @media only screen and (max-width: 900px) {
   h1 {
-    font-size: 5vw;
+    font-size: 2.5rem;
   }
 
   h2 {
-    font-size: 30px;
+    // font-size: 30px;
   }
 
   h4 {
-    font-size: 15px;
+    font-size: 0.8rem;
   }
 }
 
@@ -201,6 +201,16 @@ h4 {
     flex-direction: column;
     img {
       float: none;
+      width: 90%;
+      height: auto;
     }
+  }
+
+  .FancyHeader svg {
+    display: none;
+  }
+
+  .avatar-image {
+    display: none;
   }
 }
