--- a/style/global.css
+++ b/style/global.css
@@ -1,2 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;0,700;1,500;1,700&display=swap');
+@tailwind base;
+h1 {
+  @apply text-5xl;
+  @apply font-bold;
+}
+
+h2 {
+  @apply text-4xl;
+  @apply font-bold;
+}
+
+h3 {
+  @apply text-3xl;
+  @apply font-bold;
+}
+
+h4 {
+  @apply text-2xl;
+  @apply font-bold;
+}
+
+a {
+  @apply text-blue-600;
+}
+
+a:hover {
+  @apply underline;
+}
+
+blockquote {
+  @apply border-l-2 border-gray-200 pl-2 text-gray-500 italic;
+  @apply text-lg;
+  @apply py-2;
+  @apply my-2;
+}
+
+@tailwind components;
+@tailwind utilities;
